# dreamhouse

./: .gitignore
backend/: .gitignore  API.md  DEBUG_IMAGES_README.md  FINAL_CLASSIFICATION_APPROACH.md  LATEST_IMPROVEMENTS.md  PRODUCT.md  README.md  arihan.json  data.json  main.py  prompts.py  pyproject.toml  setup_model.py  test_e2e.py  test_segmentation.py
backend/app/: config.py  helper.py
backend/app/routers/: ai.py  floorplan.py  image.py  objects.py  projects.py  scene.py  sketch.py
backend/app/schemas/: ai.py  common.py  floorplan.py  image.py  objects.py  project.py  scene.py  sketch.py
backend/app/services/: ai_service.py  boundary_extraction_service.py  classification_service.py  floorplan_extraction_service.py  furniture_extraction_service.py  image_generation_service.py  minglun_service.py  scene_generation_service.py  segmentation_service.py  sketch_service.py
backend/app/storage/: memory_store.py
backend/backend/: arihan.json  data.json
backend/backend/boundary_debug/: wall_detections.json
backend/floorplan_items/bathtub/variation_000/: description.txt  metadata.json  model.glb
backend/floorplan_items/bathtub/variation_001/: description.txt  metadata.json  model.glb
backend/floorplan_items/bathtub/variation_002/: description.txt  metadata.json  model.glb
backend/floorplan_items/bathtub/variation_003/: description.txt  metadata.json  model.glb
backend/floorplan_items/bathtub/variation_004/: description.txt  metadata.json  model.glb
backend/test/: conftest.py
backend/test/services/: test_ai_service.py
frontend/: package.json  (+2 more)
(+311 files in other folders)
