[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "httpx>=0.28.1",
    "numpy>=2.2.0",
    "openai>=2.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.0",
    "uvicorn[standard]>=0.37.0",
    "anthropic>=0.69.0,<0.70.0",
    "supervision>=0.26.1",
    "inference-sdk>=0.12.0",
]
